--- a/www/css/main.css
+++ b/www/css/main.css
@@ -229,34 +229,69 @@ img {
 }
 
 #invitation {
-    background-color: #fff;
+    background: url('/img/invitation-background.jpg') left 1px no-repeat #fff;
     bottom: 0;
     left: 0;
-    padding: 27px 129px 29px 29px;
+    padding: 0 119px 29px 29px;
     position: absolute;
-    width: 579px;
+    width: 430px;
     z-index: 3;
     -webkit-box-shadow: 5px 4px 3px 5px rgba(0, 0, 0, .5);
             box-shadow: 5px 4px 3px 5px rgba(0, 0, 0, .5);
 }
     #invitation h1 {
+        color: #3a3a3a;
         font-size: 30px;
-        margin-bottom: 15px;
+        margin-bottom: 0;
+    }
+    #invitation p {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: .75em;
+        line-height: 1.67em;
+        margin-top: 5px;
     }
     #invitation a {
-        background-color: #393939;
+        background-color: #f7993e;
         color: #fff;
         border-radius: 3px;
         display: inline-block;
         margin-right: 20px;
-        padding: 15px;
+        padding: 15px 25px;
         text-align: center;
         text-decoration: none;
+        -webkit-border-radius: 3px;
+                border-radius: 3px;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#f7993e), to(#f68533));
+        background-image: -webkit-linear-gradient(top, #f7993e, #f68533);
+        background-image:    -moz-linear-gradient(top, #f7993e, #f68533);
+        background-image:      -o-linear-gradient(top, #f7993e, #f68533);
+        background-image:         linear-gradient(to bottom, #f7993e, #f68533);
     }
     #invitation a:hover {
-        background-color: #f78b36;
+        background-color: #f68533;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#f68533), to(#f7993e));
+        background-image: -webkit-linear-gradient(top, #f68533, #f7993e);
+        background-image:    -moz-linear-gradient(top, #f68533, #f7993e);
+        background-image:      -o-linear-gradient(top, #f68533, #f7993e);
+        background-image:         linear-gradient(to bottom, #f68533, #f7993e);
     }
 
+    #invitation a.no-btn {
+        background-color: #393939;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#393939), to(#313131));
+        background-image: -webkit-linear-gradient(top, #393939, #313131);
+        background-image:    -moz-linear-gradient(top, #393939, #313131);
+        background-image:      -o-linear-gradient(top, #393939, #313131);
+        background-image:         linear-gradient(to bottom, #393939, #313131);
+    }
+    #invitation a.no-btn:hover {
+        background-color: #393939;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#313131), to(#393939));
+        background-image: -webkit-linear-gradient(top, #313131, #393939);
+        background-image:    -moz-linear-gradient(top, #313131, #393939);
+        background-image:      -o-linear-gradient(top, #313131, #393939);
+        background-image:         linear-gradient(to bottom, #313131, #393939);
+    }
 
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
