Updating body font family based on font set in the comp.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -196,7 +196,7 @@ textarea {
 
 body {
     background: url(../img/woodgrain.jpg) repeat;
-    font-family: "Helvetica", "Arial", sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     height: 600px;
     width: 888px;
 }
