--- a/www/css/main.css
+++ b/www/css/main.css
@@ -309,6 +309,44 @@ img {
     position: fixed;
 }
 
+#thanks-notice {
+    background-color: #f7983d;
+    color: #FFF;
+    display: none;
+    height: 42px;
+    letter-spacing: 1px;
+    padding: 5px 10px;
+    text-shadow: 1px 1px 1px #666;
+    text-align: center;
+    -webkit-border-radius: 3px;
+            border-radius: 3px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f7993e), to(#f68533));
+    background-image: -webkit-linear-gradient(top, #f7993e, #f68533);
+    background-image:    -moz-linear-gradient(top, #f7993e, #f68533);
+    background-image:      -o-linear-gradient(top, #f7993e, #f68533);
+    background-image:         linear-gradient(to bottom, #f7993e, #f68533);
+}
+    #thanks-notice h4 {
+        font-size: 1em;
+        margin: 0;
+        text-transform: uppercase;
+    }
+    #thanks-notice p {
+        color: #FFF;
+        margin: 0;
+    }
+    #thanks-notice.answered-no {
+        background-color: #393939;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#393939), to(#313131));
+        background-image: -webkit-linear-gradient(top, #393939, #313131);
+        background-image:    -moz-linear-gradient(top, #393939, #313131);
+        background-image:      -o-linear-gradient(top, #393939, #313131);
+        background-image:         linear-gradient(to bottom, #393939, #313131);
+    }
+    #thanks-notice p {
+        display: none;
+    }
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    Theses examples override the primary ('mobile fimage-replacest') styles.
